# safe-job

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mkdocs.yml  requirements-docs.txt
.envs/: .env.development.template  .env.example  .env.test  README.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: branch-protection.yml  ci.yml  docs.yml
backend/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
backend/apps/core/: tests.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  test.py
backend/static/: .gitkeep
docs/: Dockerfile  README-MKDOCS.md  index.md  plan.md  pyproject.toml  requirements.txt
docs/api/: overview.md
docs/architecture/: README.md  architecture.md  authentication.md  internationalization.md
docs/business/: README.md  business-concept.md  prd.md
docs/development/: backend.md  ci-cd.md  code-quality.md  deployment.md  docker.md  frontend.md  setup.md  testing.md
docs/getting-started/: development-workflow.md  overview.md  quick-start.md
docs/phases/: README.md  phase-1-foundation.md  phase-2-authentication.md  phase-3-business-models.md  phase-4-applications-matching.md  phase-5-messaging-system.md  phase-6-document-management.md  phase-7-admin-interface.md  phase-8-frontend-polish.md  phase-9-aws-deployment.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  jest.config.js  jest.config.mjs  nginx.conf  package-lock.json  package.json  prettier.config.js  prettier.config.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/components/layout/__tests__/: ProtectedRoute.test.tsx
frontend/src/pages/: AboutPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  UnauthorizedPage.tsx  index.ts
frontend/src/router/: index.tsx
frontend/src/store/: authStore.ts
frontend/src/test/: setup.ts  test-providers.tsx  utils.tsx
frontend/src/types/: auth.ts  index.ts
scripts/: init-db.sql  setup-dev.sh
