[tool.poetry]
name = "safe-job-docs"
version = "0.1.0"
description = "Documentation for Safe Job Platform"
authors = ["Safe Job Team <team@safejob.nl>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "1.5.3"
mkdocs-material = "9.4.8"
mkdocs-git-revision-date-localized-plugin = "1.2.1"
pymdown-extensions = "10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# No dev dependencies needed for docs
